--- a/BaseProject.vcxproj
+++ b/BaseProject.vcxproj
@@ -96,6 +96,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>BaseProject</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>SpringContest_26</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
